@@ -23,6 +23,7 @@ depth: 1
 
  * Ensure `label_format` on StructBlock gracefully handles missing variables (Aadi jindal)
  * Adopt a no-JavaScript and more accessible solution for the 'Reset to default' switch to Gravatar when editing user profile (Loveth Omokaro)
+ * Ensure `Site.get_site_root_paths` works on cache backends that do not preserve Python objects (Jaap Roes)
 
 ### Documentation
 
